<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tv_no1"
        android:layout_width="158dp"
        android:layout_height="42dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:hint="@string/tv_no1"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_no2"
        android:layout_width="158dp"
        android:layout_height="42dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:hint="@string/tv_no2"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_no1" />

    <EditText
        android:id="@+id/edt_no1"
        android:layout_width="164dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/edt_no1"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_no1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_no1" />

    <EditText
        android:id="@+id/edt_no2"
        android:layout_width="164dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/edt_no2"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_no2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_no2" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#C1C0C0"
        android:hint="@string/btn_add"
        android:onClick="add"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ans" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#C1C0C0"
        android:hint="@string/btn_minus"
        android:onClick="subtract"
        android:textColorHint="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_add"
        tools:layout_editor_absoluteY="381dp" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#C1C0C0"
        android:hint="@string/btn_multiply"
        android:onClick="multiply"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_division"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#C1C0C0"
        android:hint="@string/btn_division"
        android:onClick="divide"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_multiply"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus" />

    <TextView
        android:id="@+id/tv_ans"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginTop="70dp"
        android:hint="@string/tv_ans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_no2" />


</androidx.constraintlayout.widget.ConstraintLayout>